fix dark mode header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@ header {
 		color: white;
 	}
 
-	.odd, .reddit-title {
+	.odd, .reddit-header {
 		background-color: #333;
 	}
 
